--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/redacao_enem
 spring.datasource.username=postgres
 spring.datasource.password=rootroot
+
+redacao.enem.tempo-expiracao-token = 86400000
+redacao.enem.secret = l#y6tNO@C5DH!&PWa%@XEX6eZ%aLIc$zV01SBSRGqB9hahaaHZ
